syntax = "proto3";

option java_multiple_files = true;
option java_package = "grpc.services.LexingCoWarehouse";
option java_outer_classname = "LexingCoWarehouseServiceImpl";

package LexingCo;

service LexingCoWarehouseService{
  rpc restockFactory(RestockRequest) returns (RestockReply){}
  rpc restockFactoryStream(stream RestockRequest) returns (RestockReply){}
}

message RestockRequest{
  string text = 1;
}

message RestockReply{
  string text = 2;
}